[Bug Fixed]: Bank Account Modal Responsive design change except Button

--- a/app/assets/stylesheets/payments.css
+++ b/app/assets/stylesheets/payments.css
@@ -111,6 +111,7 @@ only screen and (max-width: 480px) {
     .influencer-payment-div .btn-withdraw {
         float: left;
         margin: 15px 0;
+        padding: 4px 0;
     }
 }
 
@@ -240,7 +241,7 @@ only screen and (max-width: 800px) {
 }
 
 @media
-only screen and (max-width: 380px) {
+only screen and (max-width: 415px) {
     td, tr {
         display: block;
         border: 1px solid #dddddd;
@@ -516,9 +517,10 @@ only screen and (max-width: 480px) {
 only screen and (max-width: 480px) {
 
     .btn-influencer-download {
-        font-size: 11px;
-        margin: 15px 2px 3px 5px;
-        padding: 5px 10px 5px 10px;
+        font-size: 13px;
+        margin: 10px 0;
+        padding: 5px 0;
+        width: 100%;
     }
 }
 
@@ -571,9 +573,10 @@ only screen and (max-width: 480px) {
     }
 
     .btn-withdraw, .btn-close {
-        font-size: 16px;
+        font-size: 13px;
         width: 100%;
-        padding: 0;
+        padding: 5px 0;
+        margin: 5px 0;
     }
 }
 
