--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -973,6 +973,21 @@ textarea#company-short-bio{
   padding-right: 0;
 }
 
+.left-zero-margin {
+  margin-left: 0;
+}
+
+.right-zero-margin {
+  margin-right: 0;
+}
+
+.display-inline-block {
+  display : inline-block;
+}
+
+.bank-btn-set {
+  margin-left: 65px;
+}
 
 
 
