facebook accounts can now be activated and de-activated

--- a/app/views/explores/show.html.erb
+++ b/app/views/explores/show.html.erb
@@ -88,7 +88,7 @@
                     <p class="title"> <%= influencer.industry.present? ? influencer.industry : 'Entrepreneur' %></p>
                     <p class="influencer-biography"><%= influencer.short_bio %> </p>
                     <div>
-                      <%= image_tag('explore-followers.png', :alt => "number-of-follower") %> &nbsp;<%= influencer.facebook_accounts.pluck(:number_of_followers).max %>
+                      <%= image_tag('explore-followers.png', :alt => "number-of-follower") %> &nbsp;<%= influencer.max_followers %>
                     </div>
                   </div>
                   <%= link_to 'VIEW PROFILE', influencer_path(influencer), remote: true, :class => "btn btn-primary btn-view-profile" %>
