--- a/app/views/profile/_add_facebook_account.html.erb
+++ b/app/views/profile/_add_facebook_account.html.erb
@@ -10,7 +10,7 @@
             <div class="add-another-account">Add another account</div>
 
             <div class="account-content">
-                <form method="POST" action="<%= update_accounts_profile_index_path %>">
+                <form method="POST" action="<%= update_accounts_profile_index_path %>" data-remote="true">
                     <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
                     <input type="hidden" name="access_token"/>
                     {{#each accounts}}
