create bank account responsive issues solve

--- a/app/views/bank_accounts/_add_bank_account.html.erb
+++ b/app/views/bank_accounts/_add_bank_account.html.erb
@@ -104,12 +104,25 @@
             <div class="col-md-8">
               <%= f.text_field :iban %>
             </div>
-
-            <div class="display-inline-block bank-btn-set">
-              <div class="pull-left">
-                <%= f.button  'SAVE', class: 'btn btn-withdraw pull-right' %>
+<style>
+  .remove-both-margin{
+      margin-right: 0;
+      margin-left: 0;
+  }
+        .btn-save-account{
+            margin-left: 100px;
+        }
+        @media (max-width: 767px) {
+            .btn-save-account{
+                margin-left: 0;
+            }
+        }
+</style>
+            <div class="row remove-both-margin">
+              <div class="col-md-5 ">
+                <%= f.button  'SAVE', class: 'btn btn-withdraw btn-save-account' %>
               </div>
-              <div class="pull-left">
+              <div class="col-md-7">
                 <%= link_to 'CANCEL', '', class: 'btn btn-close' %>
               </div>
             </div>
