--- a/app/assets/stylesheets/brands-setting.css
+++ b/app/assets/stylesheets/brands-setting.css
@@ -1,4 +1,3 @@
-
 /* on-off switching button style sheet */
 .onoffswitch {
     position: relative;
@@ -89,7 +88,6 @@
 }
 /* end of on-off switch style */
 
-
 .brands-setting-content-wrapper{
     margin: 25px 22px;
     background-color: #FFFFFF;
@@ -109,12 +107,15 @@
 .brands-setting{
     margin-bottom: 46px;
 }
+
 .deactive-brand-setting{
     margin-bottom: 0;
 }
+
 .privacy-setting .setting-content {
     padding-left: 67px;
 }
+
 @media  (max-width: 767px){
     .privacy-setting .setting-content {
         padding-left: 0px;
@@ -140,16 +141,19 @@
     margin-left: 21px;
     vertical-align: baseline;
 }
+
 .brands-setting header{
     font-size: 15px;
     color: #ff3059;
     margin-bottom: 34px;
     font-weight: 600;
 }
+
 .other-setting .section2{
     margin-top: 15px;
     padding-left: 4px;
 }
+
 .btn-deactive{
     width: 196px;
     height: 32px;
@@ -160,6 +164,7 @@
     font-size: 13px;
 
 }
+
 .btn-save{
     background-color: #f8c102;
     width: 130px;
@@ -170,10 +175,8 @@
     margin-left: 20px;
 }
 
-/*
-
-
-
-
-
-*/
+@media (max-width: 480px){
+    .brands-setting .info {
+        margin-left: 0;
+    }
+}
