--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -985,8 +985,9 @@ textarea#company-short-bio{
   display : inline-block;
 }
 
-.bank-btn-set {
-  margin-left: 65px;
+.remove-both-margin {
+  margin-right: 0;
+  margin-left: 0;
 }
 
 
