make all social button same with height

--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -47,11 +47,11 @@
           </a>
           <span class="space"></span>
           <a href="#">
-            <img width="14" height="14" src="<%= image_path('linkedin.png') %>" alt="Linkedin">
+            <i class="fa fa-lg fa-linkedin"></i>
           </a>
           <span class="space"></span>
           <a href="#">
-            <img width="14" height="14" src="<%= image_path('google_plus.png') %>" alt="Google Plus">
+            <i class="fa fa-lg fa-google-plus"></i>
           </a>
         </div>
       </div>
