[Bug Fixed]:  1. hard break after the word 'high' in the 'About Us' section solved 2. 'Statistics' Section : have the same space at the bottom of the word 'Posts' 3. Influencers Section: space below the last image is reduced to match the top space.

--- a/app/assets/stylesheets/brands_home.scss
+++ b/app/assets/stylesheets/brands_home.scss
@@ -683,6 +683,18 @@ ul.menu-item li {
     margin-top: 0;
   }
 
+  .about-us .text-description br {
+    display: none;
+  }
+
+  .statistics {
+    padding-bottom: 140px;
+  }
+
+  .brands {
+    padding-bottom: 50px;
+  }
+
 }
 
 @media screen and (max-width: 500px) {
