--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -198,7 +198,7 @@
 
       <div class="row">
         <div class="col-md-3 col-sm-3 col-xs-12">
-          <a href="<%= root_url %>"><%= image_tag('Logo.png', :class => 'image img-responsive header-logo', :alt => 'Logo') %></a>
+          <a href="<%= current_user.brand? ? brand_home_public_index_path : root_url %>"><%= image_tag('Logo.png', :class => 'image img-responsive header-logo', :alt => 'Logo') %></a>
         </div>
         <div class="col-md-9 col-sm-9 col-xs-12 search-top-margin">
           <!-- search form -->
