--- a/app/views/public/faqs.html.erb
+++ b/app/views/public/faqs.html.erb
@@ -1,7 +1,4 @@
 <style>
-  .expandable{
-      cursor: pointer;
-  }
     .faq-container{
         margin-bottom: 20px;
         margin-top: 62px;
@@ -14,91 +11,19 @@
             padding-top: 0;
         }
     }
-  .inner_bg {
-      background: #fff none repeat scroll 0 0;
-      padding: 0 0 40px;
-      width: 100%;
-  }
-
-  .container {
-      width: 1030px;
-  }
-  #faq .panel-heading {
-      background-color: #ffb734;
-  }
-  /*working */
-  .panel-warning > .panel-heading {
-      background-color: #fcf8e3;
-      border-color: #faebcc;
-      color: #8a6d3b;
-  }
-  .expandable {
-      cursor: pointer;
-  }
-  .panel-heading {
-      border-bottom: 1px solid transparent;
-      border-top-left-radius: 3px;
-      border-top-right-radius: 3px;
-      padding: 13px 0;
-  }
-/* working */
-  #faq .panel-body.expandable {
-      padding: 0 22px;
-  }
-  #faq .panel-body.expandable h4 {
-      color: #ffb734;
-      font-size: 15px;
-      font-weight: bold;
-  }
-  #faq .expanded {
-      padding: 5px 22px;
-  }
-  .panel > .list-group, .panel > .panel-collapse > .list-group {
-      margin-bottom: 0;
-  }
-  .list-group {
-      margin-bottom: 20px;
-      padding-left: 0;
-  }
-  .panel > .list-group .list-group-item, .panel > .panel-collapse > .list-group .list-group-item {
-      border-radius: 0;
-      border-width: 1px 0;
-  }
-  .list-group-item:first-child {
-      border-top-left-radius: 4px;
-      border-top-right-radius: 4px;
-  }
-  .list-group-item {
-      background-color: #fff;
-      border: 1px solid #ddd;
-      display: block;
-      margin-bottom: -1px;
-      padding: 10px 15px;
-      position: relative;
-  }
-  #faq .expanded .list-group-item h5 {
-      color: #ffb734;
-  }
-  h5, .h5 {
-      font-size: 14px;
-  }
-  .faq-container .panel.panel-warning{
-      border: 0;
-      padding: 0;
-  }
 </style>
 
 <div class="wrapper-content faq-container">
   <div class="inner_bg" id="faq">
-    <div class="container mtop20">
+    <div class="mtop20">
       <div class="panel panel-warning">
         <div class="panel-heading expandable" data-sub=".group-1-sub" data-target=".group-1">
           <h3 class="mleft20">1. User Guide for All Members</h3>
         </div>
-        <div class="panel-body expandable expanded group-1 closed hide" data-target=".group-1-a">
+        <div class="panel-body expandable expanded group-1 closed" data-target=".group-1-a" style="display: none">
           <h4>a. Getting Started</h4>
         </div>
-        <ul class="list-group expanded group-1-sub group-1-a closed hide">
+        <ul class="list-group expanded group-1-sub group-1-a closed" style="display: none">
           <li class="list-group-item">
             <h5>i) What is Takeoff?</h5>
             <p>Welcome to Takeoff! This is a multi-platform networking service that
@@ -399,9 +324,8 @@
   </div>
 
 </div>
-
 <script>
-    $(document).ready(function () {
+    $(function () {
         $('.panel-heading').click(function (e) {
             e.stopPropagation();
             var target = $(this).data('target');
@@ -411,22 +335,41 @@
 //            $(target).show();
 //            console.log('-------------' + target + '.closed');
             if($(target + '.closed').length > 0){
-                $(target).show();
+//                ---------------slide up all------------------
+                $(target).slideDown('slow');
                 $(target).removeClass('closed');
-                console.log('all element with class ' + target + 'show');
             }else{
                 $(target).addClass('closed');
                 $(subTarget).addClass('closed');
-                console.log('all element with class ' + target + 'hide');
-                $(target).hide();
+                $(subTarget).slideUp('slow');
+                $(target).slideUp('slow');
+//                $(target).addClass('hide', 1000);
+            }
+
+        });
+//        panel body click
+        $('.panel-body').click(function (e) {
+            e.stopPropagation();
+            var target = $(this).data('target');
+            var subTarget = $(this).data('sub');
+
+            console.log(this + ' data target with ' + target);
+//            $(target).show();
+//            console.log('-------------' + target + '.closed');
+            if($(target + '.closed').length > 0){
+//                ---------------slide up all------------------
+                $(target).slideDown('slow');
+                $(target).removeClass('closed');
+            }else{
+                $(target).addClass('closed');
+                $(subTarget).addClass('closed');
+                $(subTarget).slideUp('slow');
+                $(target).slideUp('slow');
+//                $(target).addClass('hide', 1000);
             }
 
         });
 
-    });
 
-    function changeInnerState() {
-        var $this = $(this);
-        if ($this.is(':hidden')) $this.find('.panel-body').slideUp();
-    }
+    });
 </script>
