--- a/app/views/public/faqs.html.erb
+++ b/app/views/public/faqs.html.erb
@@ -11,6 +11,9 @@
             padding-top: 0;
         }
     }
+    .panel-body, .list-group{
+        display: none;
+    }
 </style>
 
 <div class="wrapper-content faq-container">
@@ -44,10 +47,10 @@
               (experts) and Advice Seekers (entrepreneurs) from all over the world.</p>
           </li>
         </ul>
-        <div class="panel-body expandable expanded group-1 closed" data-target=".group-1-b" style="display: none;">
+        <div class="panel-body expandable expanded group-1 closed" data-target=".group-1-b" >
           <h4>b. Profile &amp; Account Settings - General Questions</h4>
         </div>
-        <ul class="list-group expanded group-1-sub group-1-b closed" style="display: none;">
+        <ul class="list-group expanded group-1-sub group-1-b closed" >
           <li class="list-group-item">
             <h5>i) Why should I answer all the questions in my profile page?</h5>
             <p>It is recommended all areas and questions on your profile are
@@ -102,10 +105,10 @@
             </p>
           </li>
         </ul>
-        <div class="panel-body expandable expanded group-1 closed" data-target=".group-1-c" style="display: none;">
+        <div class="panel-body expandable expanded group-1 closed" data-target=".group-1-c" >
           <h4>c. Privacy &amp; Security</h4>
         </div>
-        <ul class="list-group expanded group-1-sub group-1-c closed" style="display: none;">
+        <ul class="list-group expanded group-1-sub group-1-c closed" >
           <li class="list-group-item">
             <h5>i) Is my contact information kept private?</h5>
             <p>We consider trust, credibility, and security to be our highest
@@ -128,13 +131,13 @@
         <div class="panel-heading expandable" data-sub=".group-2-sub" data-target=".group-2">
           <h3 class="mleft20">2. A guide for all Advice Seekers (Entrepreneurs)</h3>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-a" style="display: none;">
+        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-a" >
           <h4>a. How does Takeoff work?</h4>
         </div>
-        <div class="panel-body expanded group-2-sub group-2-a closed" style="display: none;">
+        <div class="panel-body expanded group-2-sub group-2-a closed" >
           <p>Takeoff is a very simple 5 step process</p>
         </div>
-        <ul class="list-group expanded group-2-sub group-2-a closed" style="display: none;">
+        <ul class="list-group expanded group-2-sub group-2-a closed" >
           <li class="list-group-item">
             <h5>i) Sign up</h5>
             <p>Signing up is free. If you are looking for advice, this is the place
@@ -192,37 +195,37 @@
             </p>
           </li>
         </ul>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-b" style="display: none;">
+        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-b" >
           <h4>b. How do I search for a Pilot?</h4>
         </div>
-        <div class="panel-body expanded group-2-sub group-2-b closed" style="display: none;">
+        <div class="panel-body expanded group-2-sub group-2-b closed" >
           <p>Go to <strong>Booking &gt; Search</strong> to easily find an expert
             related to your field by searching. Optimize your search results by
             using the advanced search options. View their profiles to see their work
             experience and area of expertise.</p>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-c" style="display: none;">
+        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-c" >
           <h4>c. Why am I not able to find a pilot most suited to my requirements?</h4>
         </div>
-        <div class="panel-body expanded group-2-sub group-2-c closed" style="display: none;">
+        <div class="panel-body expanded group-2-sub group-2-c closed" >
           <p>Optimize your search results by using the advanced search options.
             View their profiles to see their work experience and area of expertise.
             The advanced search allows you to narrow down to pilots of your choice
             based on their expertise, fees, time, availability, location etc. This
             will help you find a pilot most suited to your needs.</p>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-d" style="display: none;">
+        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-d" >
           <h4>d. Why do different pilots have different rates on Takeoff?</h4>
         </div>
-        <div class="panel-body expanded group-2-sub group-2-d closed" style="display: none;">
+        <div class="panel-body expanded group-2-sub group-2-d closed" >
           <p>Every Pilot has the authority to set the price per minute they think
             is best. We have a wide range of Pilots with various pricing rates.
             Select the one most suited to your budget and expertise requirements.</p>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-e" style="display: none;">
+        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-e" >
           <h4>e. How do I request a call from the Pilot selected?</h4>
         </div>
-        <div class="panel-body expanded group-2-sub group-2-e closed" style="display: none;">
+        <div class="panel-body expanded group-2-sub group-2-e closed" >
           <p>Select the Pilot you want to talk to and click on the ’Book’ icon in
             their profile. Fill in the required data and provide your Citrus account
             information, which then verifies if there is sufficient balance in your
@@ -238,10 +241,10 @@
               balance in your account.</em>
           </p>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-f" style="display: none;">
+        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-f" >
           <h4>f. How does the call happen?</h4>
         </div>
-        <div class="panel-body expanded group-2-sub group-2-f closed" style="display: none;">
+        <div class="panel-body expanded group-2-sub group-2-f closed" >
           <p>Once the Pilot confirms the meeting, you will be sent a confirmation
             notification with a secure phone number and one time access code to
             connect at the time you have scheduled.</p>
@@ -254,17 +257,17 @@
               the scheduled time.</em>
           </p>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-g" style="display: none;">
+        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-g" >
           <h4>g. Can I schedule multiple calls with the same expert?</h4>
         </div>
-        <div class="panel-body expanded group-2-sub group-2-g closed" style="display: none;">
+        <div class="panel-body expanded group-2-sub group-2-g closed" >
           <p>Absolutely! If you have found the advice to be helpful and practical,
             there is a lot of value to follow up calls and continued mentoring.</p>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-h" style="display: none;">
+        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-h" >
           <h4>h. What should I do before my call?</h4>
         </div>
-        <div class="panel-body expanded group-2-sub group-2-h closed" style="display: none;">
+        <div class="panel-body expanded group-2-sub group-2-h closed" >
           <p>i) We recommend preparing to make the most out of the call.
             Brainstorm a list of questions and points to cover that will help you
             get the advice you are seeking.</p>
@@ -275,47 +278,47 @@
             frame provided both parties are in agreement. You will be charged for
             the continuation of the call, so plan accordingly.</p>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-i" style="display: none;">
+        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-i" >
           <h4>i. Can others join my call?</h4>
         </div>
-        <div class="panel-body expanded group-2-sub group-2-i closed" style="display: none;">
+        <div class="panel-body expanded group-2-sub group-2-i closed" >
           <p>It’s up to you. You can sit in a conference room with your entire
             team surrounding you, if you wish. At this time, the call must remain a
             one-on-one call with the Pilot. We are not introducing the feature of
             conference calling yet. We will let you know if and when we introduce
             that feature on our platform.</p>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-j" style="display: none;">
+        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-j" >
           <h4>j. Can I pitch investors on Takeoff?</h4>
         </div>
-        <div class="panel-body expanded group-2-sub group-2-j closed" style="display: none;">
+        <div class="panel-body expanded group-2-sub group-2-j closed" >
           <p>Yes, that is one of the best features of our platform. We support all
             forms of networking and if you wish to pitch investors for any of the
             amazing ideas you have, we say go for it!</p>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-k" style="display: none;">
+        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-k" >
           <h4>k. How do payments work on Takeoff?</h4>
         </div>
-        <div class="panel-body expanded group-2-sub group-2-k closed" style="display: none;">
+        <div class="panel-body expanded group-2-sub group-2-k closed" >
           <p>When scheduling a call with a Pilot, you will be asked to provide
             your Citrus account details, which verifies if you have sufficient
             balance in your account. If you do not have sufficient balance, it will
             prompt you to add money to your account. Payment will be taken from your
             account only after the call is complete.</p>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-l" style="display: none;">
+        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-l" >
           <h4>l. What methods of payment do you accept?</h4>
         </div>
-        <div class="panel-body expanded group-2-sub group-2-l closed" style="display: none;">
+        <div class="panel-body expanded group-2-sub group-2-l closed" >
           <p>
             You need a Citrus account to pay. If you do not have a Citrus account,
             <a target="_blank" href="http://www.citruspay.com/">click here.</a>
           </p>
         </div>
-        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-m" style="display: none;">
+        <div class="panel-body expandable expanded group-2 closed" data-target=".group-2-m" >
           <h4>m. How do I view all transactions?</h4>
         </div>
-        <div class="panel-body expanded group-2-sub group-2-m closed" style="display: none;">
+        <div class="panel-body expanded group-2-sub group-2-m closed" >
           <p>To view your transactions and money spent till date, go to <strong>Dashboard &gt; Total Money Spent</strong>. You will be able to view a detailed report of number of calls, duration of calls, and money spent.</p>
         </div>
 
