remove inline display: none from faq pages

--- a/app/views/public/faqs.html.erb
+++ b/app/views/public/faqs.html.erb
@@ -23,10 +23,10 @@
         <div class="panel-heading expandable" data-sub=".group-1-sub" data-target=".group-1">
           <h3 class="mleft20">1. User Guide for All Members</h3>
         </div>
-        <div class="panel-body expandable expanded group-1 closed" data-target=".group-1-a" style="display: none">
+        <div class="panel-body expandable expanded group-1 closed" data-target=".group-1-a" >
           <h4>a. Getting Started</h4>
         </div>
-        <ul class="list-group expanded group-1-sub group-1-a closed" style="display: none">
+        <ul class="list-group expanded group-1-sub group-1-a closed" >
           <li class="list-group-item">
             <h5>i) What is Takeoff?</h5>
             <p>Welcome to Takeoff! This is a multi-platform networking service that
