add spinner button to sign in and sign up modal

--- a/app/views/registrations/create.js.erb
+++ b/app/views/registrations/create.js.erb
@@ -1,3 +1,4 @@
+$('.btn.has-spinner').removeClass('active');
 <% if @success %>
     $('#request-sent').modal('show');
     $('#signup').modal('hide');
