--- a/app/views/shared/_sign_up_modal.html.erb
+++ b/app/views/shared/_sign_up_modal.html.erb
@@ -61,7 +61,10 @@
                 <ul id="parsley-id-2000" class="parsley-errors-list"></ul>
               </div>
 
-              <button class="btn btn-modal-submit" type="submit">SUBMIT</button>
+              <button class="btn btn-modal-submit has-spinner" type="submit">
+                <span class="spinner"><i class="fa fa-spinner fa-spin"></i></span>
+                SUBMIT
+              </button>
             </form>
           </div>
         </div>
