--- a/app/views/profile/profile.html.erb
+++ b/app/views/profile/profile.html.erb
@@ -16,43 +16,43 @@
         <div class="form-group">
           <div class="col-md-6">
             <%= f.label :first_name, 'First Name' %>
-            <%= f.text_field :first_name, required: true  %>
+            <%= f.text_field :first_name %>
           </div>
           <div class="col-md-6">
             <%= f.label :last_name, 'Last Name' %>
-            <%= f.text_field :last_name, required: true  %>
+            <%= f.text_field :last_name %>
           </div>
         </div>
 
         <div class="form-group">
           <div class="col-md-6">
             <%= f.label :company_name, 'Company Name' %>
-            <%= f.text_field :company_name, required: true %>
+            <%= f.text_field :company_name %>
           </div>
           <div class="col-md-6">
             <%= f.label :company_email, current_user.brand? ? 'Company Email' : 'Email' %>
-            <%= f.email_field :company_email, required: true %>
+            <%= f.email_field :company_email %>
           </div>
         </div>
 
         <div class="form-group">
           <div class="col-md-6">
             <%= f.label :industry %>
-            <%= f.text_field :industry, required: true %>
+            <%= f.text_field :industry %>
           </div>
           <div class="col-md-6">
             <%= f.label :phone %>
-            <%= f.text_field :phone, required: true %>
+            <%= f.text_field :phone %>
           </div>
         </div>
 
         <div class="form-group">
           <div class="col-md-6">
             <%= f.label :street_address, class: 'textarea-label' %>
-            <%= f.text_area :street_address, rows: 4, class: 'street-address-textarea', placeholder: 'Enter your address here', required: true %>
+            <%= f.text_area :street_address, rows: 4, class: 'street-address-textarea', placeholder: 'Enter your address here' %>
 
             <%= f.label :zip_code %>
-            <%= f.text_field :zip_code, required: true %>
+            <%= f.text_field :zip_code %>
           </div>
 
           <div class="col-md-6">
@@ -63,7 +63,7 @@
               </div>
               <div class="col-md-12">
                 <%= f.label :city %>
-                <%= f.text_field :city, required: true %>
+                <%= f.text_field :city %>
               </div>
               <div class="col-md-12">
                 <%= f.label :country %>
@@ -111,7 +111,7 @@
         <div class="form-group short-bio-row">
           <div class="col-md-12">
             <%= f.label :short_bio, 'Short Bio', class: 'textarea-label' %>
-            <%= f.text_area :short_bio, rows: 8, class: 'short_bio', required: true %>
+            <%= f.text_area :short_bio, rows: 8, class: 'short_bio' %>
           </div>
         </div>
       </div>
@@ -140,22 +140,22 @@
                       <div id="fb_<%= g.object.account_id %>" class="tab-pane">
                         <div class="form-group">
                           <div class="col-md-4 col-sm-7 col-xs-10">
-                            <%= g.label :status_update_cost, "Status Update" %>
-                            <%= g.number_field :status_update_cost, { inputmode: 'numeric', required: true, pattern: '[0-9]*', min: 0 } %> INR
+                            <%= g.label :status_update_cost, 'Status Update' %>
+                            <%= g.number_field :status_update_cost, { inputmode: 'numeric', pattern: '[0-9]*', min: 0 } %> INR
                           </div>
                           <div class="col-md-6 col-sm-7 col-xs-10">
-                            <%= g.label :cover_photo_cost, "Cover Photo" %>
-                            <%= g.number_field :cover_photo_cost, { inputmode: 'numeric', required: true, pattern: '[0-9]*', min: 0 } %> INR
+                            <%= g.label :cover_photo_cost, 'Cover Photo' %>
+                            <%= g.number_field :cover_photo_cost, { inputmode: 'numeric', pattern: '[0-9]*', min: 0 } %> INR
                           </div>
                         </div>
                         <div class="form-group">
                           <div class="col-md-4 col-sm-7 col-xs-10">
-                            <%= g.label :profile_photo_cost, "Profile Photo" %>
-                            <%= g.number_field :profile_photo_cost, { inputmode: 'numeric', required: true, pattern: '[0-9]*', min: 0 } %> INR
+                            <%= g.label :profile_photo_cost, 'Profile Photo' %>
+                            <%= g.number_field :profile_photo_cost, { inputmode: 'numeric', pattern: '[0-9]*', min: 0 } %> INR
                           </div>
                           <div class="col-md-6 col-sm-7 col-xs-10">
-                            <%= g.label :video_post_cost, "Video Post" %>
-                            <%= g.number_field :video_post_cost, { inputmode: 'numeric', required: true, pattern: '[0-9]*', min: 0 } %> INR
+                            <%= g.label :video_post_cost, 'Video Post' %>
+                            <%= g.number_field :video_post_cost, { inputmode: 'numeric', pattern: '[0-9]*', min: 0 } %> INR
                           </div>
                         </div>
                       </div>
