--- a/app/views/shared/_sign_up_success_message.html
+++ b/app/views/shared/_sign_up_success_message.html
@@ -1,7 +1,7 @@
-<div class="modal fade" id="request-sent">
+<div class="global-modal modal fade" id="request-sent">
     <div class="modal-dialog modal-md">
         <div class="modal-content">
-            <div class="modal-header">
+            <div class="modal-header close-image">
                 <button area-label="Close" class="close first_close" data-dismiss="modal" tyle="button"></button>
                 <h3 class="modal-title">Request Sent</h3>
             </div>
