--- a/app/views/layouts/public.html.erb
+++ b/app/views/layouts/public.html.erb
@@ -27,10 +27,12 @@
     <div class="left">Good <%= (0..11).include?(Time.now.hour) ? 'morning' : 'afternoon'%>, <%= user_signed_in? ? current_user.full_name : 'Guest' %>!</div>
     <div class="right top_links">
       <p>
-        <a class="hidden-xs" href="<%= faqs_public_index_path %>">FAQs</a>
         <% if user_signed_in? %>
+            <a class="hidden-xs" href="<%= profile_profile_index_path %>">DASHBOARD</a>
+            <a class="hidden-xs" href="<%= faqs_public_index_path %>">FAQs</a>
             <a class="hidden-xs" href="<%= destroy_user_session_path %>">LOG OUT</a>
       <% else %>
+            <a class="hidden-xs" href="<%= faqs_public_index_path %>">FAQs</a>
             <% unless params[:controller] == 'sessions' %>
                 <a class="hidden-xs" href='#signin'  data-toggle = 'modal'>Login</a>
             <% end %>
@@ -80,7 +82,7 @@
           <li id="nav-contact-us"><a href="#contact_us">CONTACT US</a></li>
           <% if user_signed_in? %>
               <li class="visible-xs-inline"><a href="<%= faqs_public_index_path %>" class="<%= current_path(faqs_public_index_path) %>">FAQs</a></li>
-              <li class=""><a href="<%= profile_profile_index_path %>">DASHBOARD</a></li>
+              <li class="visible-xs-inline"><a href="<%= profile_profile_index_path %>">DASHBOARD</a></li>
               <li class="visible-xs-inline"><a href="<%= destroy_user_session_path %>">LOG OUT</a></li>
           <% else %>
               <li class="visible-xs-inline"><a href="<%= faqs_public_index_path %>" class="<%= current_path(faqs_public_index_path) %>">FAQs</a></li>
