spinner adding issues on form submission solve

--- a/app/views/shared/_sign_up_modal.html.erb
+++ b/app/views/shared/_sign_up_modal.html.erb
@@ -24,7 +24,7 @@
             <div id="validation-error" class="text-danger"></div>
             <div id="success-message" class="text-success"></div>
             </br>
-            <form id="ajax-signup" method="post" accept-charset="UTF-8" action="/users" data-remote="true" data-parsley-validate="">
+            <form class="show-spinner-on-submit" id="ajax-signup" method="post" accept-charset="UTF-8" action="/users" data-remote="true" data-parsley-validate="">
 
               <p>Sign up by creating an account</p>
 
