--- a/app/views/shared/_sign_in_form.html.erb
+++ b/app/views/shared/_sign_in_form.html.erb
@@ -18,7 +18,7 @@
           <div id="sign-in-validation-error">
           </div>
       <% end %>
-      <form method="post" accept-charset="UTF-8" action="/users/sign_in" data-remote="<%= params[:controller] == 'public' %>" data-parsley-validate="">
+      <form class="show-spinner-on-submit" method="post" accept-charset="UTF-8" action="/users/sign_in" data-remote="<%= params[:controller] == 'public' %>" data-parsley-validate="">
         <%= hidden_field_tag :authenticity_token, form_authenticity_token %>
         <div class="input_container">
           <div class="label_l">Email</div>
@@ -53,12 +53,3 @@
     </div>
   </div>
 </div>
-
-
-<script>
-    $(function(){
-        $('.btn.has-spinner').click(function() {
-            $(this).addClass('active');
-        });
-    });
-</script>
