sign up modal design issues solve

--- a/app/views/shared/_sign_up_modal.html.erb
+++ b/app/views/shared/_sign_up_modal.html.erb
@@ -11,11 +11,13 @@
       <div class="modal-body model-iner">
         <div class="row">
           <div class="col-md-12">
-            <input name="role" id="role_influencer" value=1 class="signup-role" checked="checked" type="radio">
-            <label for="role_influencer">I'm an Influencer</label>
-            <br>
-            <input name="role" id="role_brand" value="0" class="signup-role" type="radio">
-            <label for="role_brand">I'm a Brand</label>
+            <div class="col-md-12">
+              <input name="role" id="role_influencer" value=1 class="signup-role" checked="checked" type="radio">
+              <label for="role_influencer">I'm an Influencer</label>
+              <br>
+              <input name="role" id="role_brand" value="0" class="signup-role" type="radio">
+              <label for="role_brand">I'm a Brand</label>
+            </div>
           </div>
         </div>
         <div class="row hidden" id="brand-signup">
