[Bug Fixed]:  1. Get in touch Path changed as some refactoring happened on routes 2. input field width in profile page  change

--- a/app/views/campaigns/brand_campaign.html.erb
+++ b/app/views/campaigns/brand_campaign.html.erb
@@ -61,7 +61,7 @@
 
       <div class="tab-content panel panel-campaigns">
         <div id="performance" class="tab-pane fade in active">
-          <table class="table table-striped table-bordered table-responsive performance_table brand_campaign_performance_table">
+          <table class="table table-striped table-bordered table-responsive brand_campaign_performance_table">
 
             <thead>
             <tr class="payment-header">
@@ -83,7 +83,7 @@
         </div>
 
         <div id="engagement" class="tab-pane fade">
-          <table class="table table-striped table-bordered table-responsive engagement_table brand_campaign_engagement_table">
+          <table class="table table-striped table-bordered table-responsive brand_campaign_engagement_table">
 
             <thead>
             <tr class="payment-header">
