[Bug Fixed]:  At Responsive design 'Faqs'  Margin right corrected

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -513,6 +513,14 @@ a.center-block.text-center.user-status.small {
   margin-right: 25px;
 }
 
+@media (min-width: 460px) {
+
+  .about {
+    margin-right: 10px;
+  }
+
+}
+
 .login-link {
   display: inline-block;
   /*float: right;*/
