offer message design issue solve

--- a/app/assets/stylesheets/offers.css
+++ b/app/assets/stylesheets/offers.css
@@ -1,7 +1,8 @@
-.offer-header{
+.offer-header {
     font-size: 0;
 }
-.offer-header *{
+
+.offer-header * {
     font-size: 13px;
 }
 
@@ -23,7 +24,6 @@
     }
 }
 
-
 .deny {
     text-decoration: underline;
     color: #fe5773;
@@ -31,11 +31,13 @@
 }
 
 .inbox-logo-responsive {
-    display: inline-block;
-    width: 24px;
-    height: 24px;
     border: 1px solid #d7d7d7;
     border-radius: 50%;
+    display: inline-block;
+    height: 24px;
+    vertical-align: top;
+    width: 24px;
+
 }
 
 .offer-textarea {
@@ -51,12 +53,12 @@
     width: 20px;
 }
 
-.offers_table, .offers_table tbody tr td ,
+.offers_table, .offers_table tbody tr td,
 .starred_table, .starred_table tbody tr td {
     border: none;
 }
 
-.offers_table tbody tr td:nth-child(n+5):nth-child(-n+7) ,
+.offers_table tbody tr td:nth-child(n+5):nth-child(-n+7),
 .starred_table tbody tr td:nth-child(n+5):nth-child(-n+7) {
     font-family: 'Raleway', sans-serif;
     font-size: 13px;
@@ -85,7 +87,6 @@
     font-size: 15px;
 }
 
-
 @media (max-width: 800px) {
     .btn-compose {
         padding: 5px 20px;
@@ -100,15 +101,14 @@
     }
 }
 
-@media
-only screen and (max-width: 540px) {
-    .offers_table tbody tr td ,
+@media only screen and (max-width: 540px) {
+    .offers_table tbody tr td,
     .starred_table tbody tr td {
         display: block;
     }
 }
 
-.star-del-ref-panel{
+.star-del-ref-panel {
     text-align: right;
     margin-top: 15px;
 }
@@ -162,7 +162,7 @@ only screen and (max-width: 540px) {
 
 .offers_table tbody tr td:nth-child(n+1):nth-child(-n+4),
 .starred_table tbody tr td:nth-child(n+1):nth-child(-n+4) {
-    width:35px;
+    width: 35px;
 }
 
 .panel-offers {
@@ -175,62 +175,68 @@ only screen and (max-width: 540px) {
     padding: 20px 20px 0px 20px;
 }
 
-.btn-column{
+.btn-column {
     min-width: 200px;
 }
 
-.make-all-stared{
+.make-all-stared {
     cursor: pointer;
 }
 
-.offer-box{
-    font-family: "Raleway",sans-serif;
+.offer-box {
+    font-family: "Raleway", sans-serif;
     font-size: 13px;
 }
 
-.offer-box:last-child{
+.offer-box:last-child {
     margin-bottom: 40px;
 }
 
-.offer-box:nth-child(odd){
+.offer-box:nth-child(odd) {
     background-color: #f6f6f6;
 }
 
-.offer-box:nth-child(even){
+.offer-box:nth-child(even) {
     background-color: #ffffff;
 }
-.offer-header div{
+
+.offer-header div {
     display: inline-block;
     padding-bottom: 10px;
     padding-top: 10px;
     vertical-align: middle;
 }
 
-.read-status{
+.read-status {
     padding-left: 10px;
     padding-right: 5px;
 }
 
-.select-offer{
+.select-offer {
     padding-left: 5px;
     padding-right: 10px;
 }
 
-.make-star{
+.make-star {
     padding-left: 10px;
     padding-right: 5px;
 }
-.offer-message-sender{
+
+.offer-message-sender {
     padding-left: 5px;
 }
-.title{
-    margin-left: 10px;
+
+.title {
+    margin: 5px 0 0 10px;
+    display: inline-block;
 }
-.offer-text{
+
+.offer-text {
     margin-left: 30px;
     width: 40%;
 }
-.offer-time{
+
+.offer-time {
     float: right;
     margin-right: 20px;
     font-family: 'Hind', sans-serif;
@@ -238,31 +244,38 @@ only screen and (max-width: 540px) {
     font-size: 10.4pt;
     color: #666666;
 }
-.offer-body{
+
+.offer-body {
     padding-left: 158px;
     margin-top: 20px;
 
 }
-.message{
+
+.message {
     margin-top: 15px;
     font-size: 0.92em;
 }
-.message .title{
+
+.message .title {
 
 }
-.comment-box .offer-textarea{
+
+.comment-box .offer-textarea {
     width: 75%;
 }
-.comment-box .btn-accept{
+
+.comment-box .btn-accept {
     margin-top: -72px;
     margin-left: 33px;
 }
-.delete-selected-offer{
+
+.delete-selected-offer {
     cursor: pointer;
     padding: 0 10px 0 20px;
 }
+
 /* checkbox design */
-.offer-content{
+.offer-content {
     padding: 40px 20px;
 }
 
@@ -277,7 +290,7 @@ only screen and (max-width: 540px) {
     background: -o-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
     background: -ms-linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
     background: linear-gradient(top, #fcfff4 0%, #dfe5d7 40%, #b3bead 100%);
-    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fcfff4', endColorstr='#b3bead',GradientType=0 );
+    filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fcfff4', endColorstr='#b3bead', GradientType=0);
 }
 
 
