--- a/app/views/offers/_offer_body_view.erb
+++ b/app/views/offers/_offer_body_view.erb
@@ -12,7 +12,7 @@
     <% offer.messages.each do |message| %>
         <div id="message-<%= message.id %>" class="message message-<%= message.id %>">
           <%= image_tag offer.receiver.profile_picture, class: 'inbox-logo-responsive' %>
-          <span class="title"><%= simple_format(message.body) %> </span>
+          <div class="title"><%= simple_format(message.body) %> </div>
         </div>
     <% end %>
   </div>
